# NovaPortable-Extract

./: CMakeLists.txt  README.md  main.cpp
data/: VersionCheck  group_all_data.json  main_data
example/: .cra
include/: Nova.h
output/: .cra
output/output_png_folder/: .cra
src/: main.cpp  nova.cpp
